# BSDFXMLParser

./: CMakeLists.txt  README.md
doc/: BSDFXMLParser.md  BSDFXMLParser.md.in
src/: CMakeLists.txt
src/bsdfdata/: Data.hpp  EnumSerializers.hpp  Enumerators.cpp  Enumerators.hpp  Parser.cpp  Parser.hpp  Serializers.hpp
src/bsdfxml/: Data.hpp  Enumerators.cpp  Parser.cpp  Serializers.hpp
src/schemas/: BSDF-v1.7.7.xsd
test/: BSDFXMLEnumerators.unit.cpp  CMakeLists.txt  bsdf_xml_file_serialization.unit.cpp  bsdf_xml_full_file_load.unit.cpp  thmz_geometry_serialization.unit.cpp
test/helper/: Common.hpp
test/helper/bsdfxml/: TestHelper.cpp  TestHelper.hpp
test/products/: 2011-SA1-Small-CommaSeparated-SingleColumnScattering.XML  2011-SA1-Small-TabSeparated.XML  THMZ-Geometry-DifferentCapsAttributes.XML  THMZ-Geometry.XML
